tests/e2e/time_values_invalid6.error
Error: syntax error in story at line 1, column 5

1|    a = 2ms4d
          ^^^^^

E0068: Time value inconsistency: `d` must to be before `ms`
